--- a/LAMs.css
+++ b/LAMs.css
@@ -181,3 +181,25 @@ nav ul li a {
 nav ul li a:hover{
     color: orange;
 }
+.container{
+    max-width:1300PX;
+    margin:auto;
+    background: gray;
+    overflow: auto;
+
+}
+.gallary{
+    margin:5px;
+    border:1px solid gray;
+    float: left;
+    width: 390px;
+
+}
+.gallery img{
+    width:100%;
+    height:auto;
+
+}
+.desc{
+    padding:15px;
+    text-algin: center;
